Fix overflow

--- a/natsumi/modules/natsumi-base.css
+++ b/natsumi/modules/natsumi-base.css
@@ -288,11 +288,9 @@ their author(s) have been provided above the used code.
   }
 }
 
-#zen-browser-tabs-wrapper {
-  overflow: visible !important;
-
-  &:has(.zen-workspace-tabs-section[style*="translateX"][style*="translateX(0%)"]) {
-    overflow: hidden !important;
+.zen-workspace-tabs-section:is([style*="translateX(100%)"], [style*="translateX(-100%)"]) {
+  .vertical-pinned-tabs-container-separator {
+    opacity: 0 !important;
   }
 }
 
